style.css
.container{
    background-color: black;
    display: grid;
    grid-template-columns: 150px 100px auto 175px 130px auto;
    grid-template-rows: 75px 100px 120px 140px 80px 125px;
    grid-gap: 15px 15px;
    height: 750px;
}
.item{
    background-color: white;
    color: black;
    font-size: 30px;
    padding: 10px;
    text-align: center;
    font-family: 'Montserrat', sans-serif;
}
.box1{
    background-color: yellow;
    color: yellow;
    grid-column-start: 1;
    grid-column-end: 3;
    grid-row-start: 1;
    grid-row-end: 1;
}
.box2{
    background-color: pink;
    color: pink;
    grid-column-start: 3;
    grid-column-end: 4;
    grid-row-start: 1;
    grid-row-end: 4;
}
.box3{
    background-color: lightgreen;
    color: lightgreen;
    grid-row-start: 1;
    grid-row-end: 3;
    grid-column-start: 5;
    grid-column-end: 7;
}
.box4{
    grid-row-start: 3;
    grid-row-end: 4;
    grid-column-start: 4;
    grid-column-end: 7;
}
.box5{
    background-color: black;
    grid-column-start: 4;
    grid-column-end: 5;
    grid-row-start: 1;
    grid-row-end: 3;
}
.box6{
    background-color: black;
    grid-row-start: 2;
    grid-row-end: 5;
    grid-column-start: 1;
    grid-column-end: 2;
}
.box7{
    grid-column-start: 2;
    grid-column-end: 3;
    grid-row-start: 2;
    grid-row-end: 4;
}
.box8{
    background-color: red;
    color: red;
    grid-row-start: 4;
    grid-row-end: 5;
    grid-column-start: 2;
    grid-column-end: 4;
}
.box9{
    background-color: #B19CD9;
    color: #B19CD9;
    grid-row-start: 4;
    grid-row-end: 6;
    grid-column-start: 4;
    grid-column-end: 5;
}
.box10{
    background-color: black;
    grid-column-start: 5;
    grid-column-start: 6;
    grid-row-start: 4;
    grid-row-end: 5;
}
.box11{
    grid-column-start: 6;
    grid-column-end: 7;
    grid-row-start: 4;
    grid-row-end: 5;
}
.box12{
    background-color: blue;
    color: blue;
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 5;
    grid-row-end: 7;
}
.box13{
    grid-column-start: ;
    grid-column-end: ;
    grid-row-start: ;
    grid-row-end: ;
}
.box14{
    grid-column-start: ;
    grid-column-end: ;
    grid-row-start: ;
    grid-row-end: ;
}
.box15{
    grid-column-start: ;
    grid-column-end: ;
    grid-row-start: ;
    grid-row-end: ;
}
.box16{
    grid-column-start: ;
    grid-column-end: ;
    grid-row-start: ;
    grid-row-end: ;
}
    

